# md2html

./: CHANGELOG.md  README.md  __init__.py  example.md  md2html.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ruff-autofix.yml  ruff-fix.yml
tests/: test_md2html.py
