[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2html"
version = "1.1.0"
description = "A Python tool to convert Markdown files to HTML with table of contents and theme support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kim Hakseong", email = "makseong@gmail.com"}
]
keywords = ["markdown", "html", "converter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities"
]
dependencies = [
    "markdown>=3.0.0",
    "beautifulsoup4>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.1.0",
    "black>=22.0.0"
]

[project.scripts]
md2html = "md2html:main"

[project.urls]
Homepage = "https://github.com/Kim-Hakseong/md2html"
Repository = "https://github.com/Kim-Hakseong/md2html"
Issues = "https://github.com/Kim-Hakseong/md2html/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py310"]
